--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="shortcut icon" type="image/jpg" href="/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Câu hỏi thường gặp - F1GENZ FAQ</title>
+    <title>Đa ngôn ngữ - F1GENZ Multilanguage</title>
   </head>
   <body>
     <div id="root"></div>
